# quant-dev-roadmap

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
apps/hello/: main.cpp
apps/leetcode/: reverseInt.cpp
apps/practice/Functions/: forward  forwardDeclaration.cpp  practice  practice.cpp
apps/practice/Functions/headers/: main  main.cpp  math.cpp  math.h
apps/practice/TypeConversion/: basics.cpp  test  test.cpp
apps/practice/notes/0-LearnCpp/: add  add.cpp  averageNum  averageValidNum.cpp  constantDateTime.cpp  dateTime  main.cpp
apps/practice/notes/2-LearnCpp/: changeValue  changeValue.cpp  forwardDeclaration.cpp  functionCall  functionCall.cpp  nameSpace  nameSpace.cpp  returnValue.cpp  returnvalue  viodNonvoid.cpp  void
apps/practice/notes/3-LearnCpp/: assert  assertion.cpp  makeCodeRun.cpp  makeCoderun  tracing  tracing.cpp
docs/Notes/Month 0/: setting up CI.docx
tests/: test_add.cpp
